hphp/hack/test/typecheck/expression_trees/instance_method_call.php.like_types.exp
File "instance_method_call.php", line 13, characters 5-13:
Unsupported syntax for expression trees. (Parsing[1002])
